<resources>
    <!-- app -->
    <string name="app_name">Автореле</string>
    <string name="app_packages">ru.android.bluetooth</string>
    <string name="settings">Настройки</string>

    <!-- file dialog -->
    <string name="generate_dialog_title">Выберите способ генерации</string>
    <string name="file_mistake">Файл не является корректным</string>
    <string name="file_loaded">Файл загружен</string>
    <string name="reload_table">Перезагрузить таблицу</string>

    <!-- dialog -->
    <string name="mistake">Ошибка</string>
    <string name="cancel">Выход</string>
    <string name="connection_failed">Соединение разорвано</string>

    <!-- dialog_loading.xml -->
    <string name="connect_to_device">Подключение к устройству\n</string>
    <string name="send_request">Отправка запроса</string>
    <string name="loading">Загрузка</string>

    <!-- buttons -->
    <string name="ok">Ok</string>

    <!-- dialog_password.xml -->
    <string name="input_password">Введите пароль</string>
    <string name="password">Пароль</string>

    <!-- activity_change_choosed_day.xml -->
    <string name="sunrise">восход</string>
    <string name="sunset">закат</string>

    <!-- activity_choose_device.xml -->
    <string name="choose_device">Выберите устройство</string>
    <string name="connect">Cоединиться</string>
    <string name="device_is_not_on_net">Устройство не находится в сети</string>

    <!-- activity_main.xml -->
    <string name="commands">Команды</string>
    <string name="status">Статус</string>
    <string name="version">Версия</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="change">Изменить</string>
    <string name="schedule">Расписание</string>
    <string name="choose_or_change">Посмотреть/Изменить</string>
    <string name="generate_schedule_main">Сгенерировать\n расписание</string>

    <!-- activity_calendar -->
    <string name="generate_hand_one_day">Изменить выбранный день</string>
    <string name="generate_sunrise_sunset">Генерация по Восходу/Закату солнца</string>
    <string name="save_schedule_as_file">Выгрузить расписание в Excel файл</string>
    <string name="load_schedule">Загрузить расписание</string>
    <string name="save_schedule_in_autorele">Сохранить измененное расписание\n в автореле</string>
    <string name="loading_schedule">Запись расписания</string>
    <string name="schedule_saved">Расписание было успешно записано в Автореле </string>

    <!-- calendar's months tab -->
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>

    <string-array name="months">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>

    <!-- activity_settings -->
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
    <string name="manual_mode">Ручной режим</string>
    <string name="auto_mode">Авто режим</string>
    <string name="change_device_name">Изменить название устройства</string>
    <string name="change_password">Изменить пароль</string>
    <string name="reset_controller">Сброс контроллера</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="set_coordinates_by_hand">Ввести координаты вручную</string>
    <string name="timezone">Временная зона</string>
    <string name="set_timezone_by_hand">Ввести временную зону вручную</string>
    <string name="sync">Обновить</string>

    <!-- CalendarActivity dialog -->
    <string name="not_choosed_day">Вы не выбрали день</string>

    <!-- CalendarFragment -->
    <string name="day_of_month">День \nмесяца</string>

    <!-- ChangeChoosedDayActivity -->
    <string name="sunrise_min">Восход мин.:</string>
    <string name="sunset_min">Закат мин.:</string>

    <!-- FilePresenter -->
    <string name="choose_excel_file">Выберите Excel файл</string>
    <string name="load">Загрузить</string>

    <!-- CalendarPresenter -->
    <string name="writing_schedule_to_file">Запись расписания в файл</string>
    <string name="file_saved">Файл сохранен</string>
    <string name="saved_in">Сохранен в</string>
    <string name="reading_schedule">Считывание расписания</string>

    <!-- LocationActivity -->
    <string name="location">Местопложение</string>
    <string name="allow_to_include_location">Разрешите включить ваше местоположение</string>

    <!-- ResponseView -->
    <string name="controller_is_reset">Контроллер сброшен</string>
    <string name="password_is_changed">Пароль изменен</string>

    <!-- SettingsActivity -->
    <string name="read_data">Считывание данных</string>
    <string name="new_name_for_the_device">Новое название для устройства</string>
    <string name="save">Сохранить</string>

</resources>
