<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="ru.android.autorele.settings.SettingsActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:padding="@dimen/padding_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_device_title"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_very_large"
                android:layout_alignParentTop="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_device_address"
                android:gravity="center"
                android:textSize="@dimen/text_size_small"
                android:layout_below="@+id/tv_device_title"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btn_on_device"
                android:layout_width="@dimen/btn_on_off_width"
                android:layout_height="@dimen/btn_on_off_height"
                android:text="@string/on"
                android:background="@drawable/btn_off"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_device_address"/>

            <Button
                android:id="@+id/btn_off_device"
                android:layout_width="@dimen/btn_on_off_width"
                android:layout_height="@dimen/btn_on_off_height"
                android:text="@string/off"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_off"
                android:layout_below="@+id/btn_on_device"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_manual_mode"
                android:layout_below="@+id/tv_device_address"
                android:text="@string/manual_mode"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_auto_mode"
                android:text="@string/auto_mode"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_below="@+id/tv_device_address"
                android:layout_toRightOf="@+id/cb_manual_mode"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_controller_functions"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_below="@+id/cb_auto_mode"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_normal">

                    <Button
                        android:layout_width="@dimen/btn_ok_width"
                        android:layout_height="@dimen/btn_on_off_height"
                        android:id="@+id/btn_change_name"
                        android:text="@string/ok"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:id="@+id/tv_status_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_size_very_small"
                        android:text="@string/change_device_name" />

                    <TextView
                        android:id="@+id/tv_change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_size_very_small"
                        android:layout_below="@+id/btn_change_name"/>

                    <Button
                        android:layout_width="@dimen/btn_ok_width"
                        android:layout_height="@dimen/btn_on_off_height"
                        android:id="@+id/btn_change_password"
                        android:text="@string/ok"
                        android:layout_below="@+id/btn_change_name"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:id="@+id/tv_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_size_very_small"
                        android:layout_below="@+id/btn_change_password"
                        android:text="@string/reset_controller" />

                    <Button
                        android:id="@+id/btn_reset_controller"
                        android:layout_width="@dimen/btn_ok_width"
                        android:layout_height="@dimen/btn_on_off_height"
                        android:text="@string/ok"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/btn_change_password" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_latitude"
                        android:layout_below="@+id/btn_reset_controller"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_very_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:padding="@dimen/padding_small">

                        <AutoCompleteTextView
                            android:id="@+id/actv_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/latitude"
                            android:inputType="numberDecimal"
                            android:maxLines="@integer/max_lines_small"
                            android:enabled="false"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/til_latitude"
                        android:layout_marginTop="@dimen/margin_very_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:padding="@dimen/padding_small">

                        <AutoCompleteTextView
                            android:id="@+id/actv_longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/longitude"
                            android:inputType="numberDecimal"
                            android:maxLines="@integer/max_lines_small"
                            android:enabled="false"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cb_set_coordinates_by_hand"
                        android:text="@string/set_coordinates_by_hand"
                        android:layout_below="@+id/til_longitude"
                        android:layout_marginTop="@dimen/margin_very_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:padding="@dimen/padding_small"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_timezone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_below="@+id/cb_set_coordinates_by_hand"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:padding="@dimen/padding_small">

                        <AutoCompleteTextView
                            android:id="@+id/actv_timezone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/timezone"
                            android:inputType="number"
                            android:maxLines="@integer/max_lines_small"
                            android:enabled="false"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cb_set_timezone_by_hand"
                        android:text="@string/set_timezone_by_hand"
                        android:layout_below="@+id/til_timezone"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:padding="@dimen/padding_small"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_sync_geolocation"
                        android:text="@string/sync"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_below="@+id/cb_set_timezone_by_hand"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>