<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:visibility="invisible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_large"
    tools:context="ru.android.bluetooth.main.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_controller_functions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cardview:cardCornerRadius="@dimen/cardview_corner_radius"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_very_small"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_commands_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:text="@string/commands"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:layout_below="@id/tv_commands_title"
                android:text="@string/status" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_version_title"
                android:layout_toEndOf="@+id/tv_version_title"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:layout_below="@id/tv_commands_title" />

            <Button
                android:id="@+id/btn_sync_status"
                android:layout_width="@dimen/btn_ok_width"
                android:layout_height="@dimen/btn_ok_height"
                android:text="@string/ok"
                android:focusable="true"
                android:layout_below="@id/tv_commands_title"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/tv_version_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_status"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_very_small"
                android:padding="@dimen/padding_small"
                android:text="@string/version" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status"
                android:layout_toRightOf="@+id/tv_version_title"
                android:layout_toEndOf="@+id/tv_version_title"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_very_small"
                android:padding="@dimen/padding_small" />

            <Button
                android:id="@+id/btn_sync_version"
                android:layout_width="@dimen/btn_ok_width"
                android:layout_height="@dimen/btn_ok_height"
                android:text="@string/ok"
                android:layout_marginTop="@dimen/margin_very_small"
                android:layout_below="@+id/tv_status"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll1"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_very_large"
                android:layout_marginLeft="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:layout_below="@id/tv_version">

                <TextView
                    android:id="@+id/tv_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_version"
                    android:text="@string/date"
                    android:layout_weight="@integer/weight_3_item_linear_layout"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_version"
                    android:layout_weight="@integer/weight_3_item_linear_layout"/>

                <Button
                    android:id="@+id/btn_set_date"
                    android:layout_width="@dimen/btn_change_width"
                    android:layout_height="@dimen/btn_change_height"
                    android:text="@string/change"
                    android:layout_weight="@integer/weight_large_item_linear_layout"
                    android:layout_below="@+id/tv_version"
                    android:layout_toRightOf="@+id/tv_time"
                    android:layout_toEndOf="@+id/tv_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll2"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:layout_below="@id/ll1">

                <TextView
                    android:id="@+id/tv_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll1"
                    android:text="@string/time"
                    android:layout_weight="@integer/weight_3_item_linear_layout"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_time_title"
                    android:layout_below="@+id/ll1"
                    android:layout_weight="@integer/weight_3_item_linear_layout"/>

                <Button
                    android:id="@+id/btn_set_time"
                    android:layout_width="@dimen/btn_change_width"
                    android:layout_height="@dimen/btn_change_height"
                    android:text="@string/change"
                    android:layout_toRightOf="@+id/tv_time"
                    android:layout_below="@+id/ll1"
                    android:layout_weight="@integer/weight_large_item_linear_layout" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_schedule"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cardview:cardCornerRadius="@dimen/cardview_corner_radius"
        android:layout_below="@+id/cv_controller_functions"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/margin_very_small"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_schedule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:layout_marginLeft="@dimen/margin_bottom_very_small"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_small"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_schedule_name"
                android:enabled="false"
                android:padding="@dimen/padding_small"
                android:layout_below="@id/tv_schedule_title"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_edit_schedule"
                android:text="@string/choose_or_change"
                android:drawableLeft="@drawable/pen"
                android:layout_marginTop="@dimen/margin_small"
                android:drawablePadding="@dimen/drawable_padding_normal"
                android:textSize="@dimen/text_size_very_small"
                android:padding="@dimen/padding_small"
                android:layout_below="@+id/et_schedule_name" />

            <Button
                android:layout_width="@dimen/btn_change_width"
                android:layout_height="@dimen/btn_change_height"
                android:id="@+id/btn_edit_schedule"
                android:text="@string/ok"
                android:layout_below="@+id/et_schedule_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>